kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: go-app-service
             port: 
               number: 8080
